ajustando para o vendedor poder ver os indicadores das suas vendas e o indicador de venda pode ser estratificado por vendedor.
